--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,6 @@
 name: Release
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -34,100 +35,3 @@ jobs:
         run: yarn release-github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  release_maven:
-    name: Release to Maven
-    needs: build_artifact
-    runs-on: ubuntu-latest
-    container:
-      image: jsii/superchain
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v1
-        with:
-          name: dist
-      - name: Release
-        run: npx -p jsii-release jsii-release-maven
-        env:
-          MAVEN_GPG_PRIVATE_KEY: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
-          MAVEN_GPG_PRIVATE_KEY_PASSPHRASE: ${{ secrets.MAVEN_GPG_PRIVATE_KEY_PASSPHRASE }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
-          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-          MAVEN_STAGING_PROFILE_ID: ${{ secrets.MAVEN_STAGING_PROFILE_ID }}
-
-  release_npm:
-    name: Release to NPM
-    needs: build_artifact
-    runs-on: ubuntu-latest
-    container:
-      image: jsii/superchain
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v1
-        with:
-          name: dist
-      - name: Release
-        run: npx -p jsii-release jsii-release-npm
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-  release_nuget:
-    name: Release to Nuget
-    needs: build_artifact
-    runs-on: ubuntu-latest
-    container:
-      image: jsii/superchain
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v1
-        with:
-          name: dist
-      - name: Release
-        run: npx -p jsii-release jsii-release-nuget
-        env:
-          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-
-  release_pypi:
-    name: Release to PyPi
-    needs: build_artifact
-    runs-on: ubuntu-latest
-    container:
-      image: jsii/superchain
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v1
-        with:
-          name: dist
-      - name: Release
-        run: npx -p jsii-release jsii-release-pypi
-        env:
-          TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
-
-  release_homebrew:
-    name: Release to Homebrew
-    # The branch or tag ref that triggered the workflow run.
-    if: startsWith(github.event.head_commit.message, 'chore(release)') && contains(github.event.head_commit.message, 'beta') == false
-    needs: release_npm
-    runs-on: ubuntu-latest
-    steps:
-      # extract version number from package.json
-      - uses: actions/checkout@v2
-      - name: installing dependencies
-        run: tools/install-workflow-deps.sh
-      - name: set version
-        run: tools/align-version.sh
-      - name: version
-        id: get_version
-        run: |
-          version=$(node -p "require('./package.json').version")
-          echo "::set-output name=version::${version}"
-
-      # A PR will be sent to github.com/Homebrew/homebrew-core to update this formula:
-      - uses: mislav/bump-homebrew-formula-action@v1
-        with:
-          formula-name: cdk8s
-          download-url: https://registry.npmjs.org/cdk8s-cli/-/cdk8s-cli-${{ steps.get_version.outputs.version }}.tgz
-          commit-message: cdk8s ${{ steps.get_version.outputs.version }}
-        env:
-          COMMITTER_TOKEN: ${{ secrets.HOMEBREW_COMMITTER_TOKEN }}
